# hce

./: CMakeLists.txt
MPI/: matrix_multiplication.cpp  pi.cpp  quicksort.cpp
OpenMP/: matrix.cpp  matrix.h  pi.cpp  quicksort.cpp
